--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ importlib-resources==6.1.1
 ipykernel==6.27.1
 ipython==8.12.3
 jedi==0.19.1
-jupyter-client==8.6.0
-jupyter-core==5.5.0
+jupyter_client==8.6.0
+jupyter_core==5.5.0
 kiwisolver==1.4.5
 matplotlib==3.7.4
 matplotlib-inline==0.1.6
@@ -32,16 +32,17 @@ prompt-toolkit==3.0.41
 psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pygments==2.17.2
+Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 pyzmq==25.1.1
+seaborn==0.13.0
 six==1.16.0
 stack-data==0.6.3
 tornado==6.4
 traitlets==5.14.0
-typing-extensions==4.8.0
+typing_extensions==4.8.0
 tzdata==2023.3
 wcwidth==0.2.12
 zipp==3.17.0
