--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,14 @@ asttokens==2.4.1
 backcall==0.2.0
 comm==0.2.0
 contourpy==1.1.1
+cramjam==2.7.0
 cycler==0.12.1
 debugpy==1.8.0
 decorator==5.1.1
 executing==2.0.1
+fastparquet==2023.10.1
 fonttools==4.45.1
+fsspec==2023.12.1
 h==0.99
 importlib-metadata==6.8.0
 importlib-resources==6.1.1
